# AD-FortuneTeller-server

./: .gitignore  LICENSE.md  README.md  createCSV.py  jsonarray2dict.py  regex.py  requirements.txt  ryousei.csv  script.py
data/csv/: result.csv
data/txt/: filter_extend.txt  filter_network.txt
model/: model.h5
src/: AffiML.py  checkURL.py  crawling.py  createCSV.py  csv2dict.py  regex.py  script.py  server.py  teller.py  virustotal.py
src/crawling/: crawling.py  ok.json  ok.txt  pyproject.toml  requirements.txt  url.csv
src/domain/: domain.py
src/mscript/: LICENSE  README.md  associative_array.txt  filter.py  filter_extend.txt  filter_network.txt
src/regex/: regex.py
src/virustotal/: virustotal.py
