[tool.poetry]
name = "extract-atag"
version = "0.1.0"
description = ""
authors = ["kota <52403688+yashikota@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.0"
tldextract = "^3.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
